<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Adventist camp</string>
    <string name="roteiro">Script</string>
    <string name="compartilhar">Share</string>
    <string name="musicas">Music</string>
    <string name="info">Informations</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="segunda">Monday</string>
    <string name="terca">Tuesday</string>
    <string name="sexta">Friday</string>
    <string name="sabado">Saturday</string>
    <string name="domingo">Sanday</string>
    <string name="meditacao">Meditation</string>
    <string name="news">News</string>
    <string name="contato">Contact</string>
    <string name="title_news">Journal of Retreat</string>
    <string name="contatos">Contacts</string>
    <string name="titulo_musicas">Musics</string>
    <string name="titulo_contatos">Contacts</string>
    <string name="titulo_item_men_pesquisar">Find</string>
    <string name="publicar">Share</string>
    <string name="filtro">Filter</string>

    <string name="mandamentos">Commandments</string>
    <string name="mensagem">Menssages</string>
    <string name="o_que_levar">What to take</string>
    <string name="regras">Rules</string>
</resources>
